--- a/index.html
+++ b/index.html
@@ -37,16 +37,18 @@
     <div class="container">
       <!-- navbar -->
       <nav>
-        <div><img src="./images/logo.png" alt="" /></div>
-        <ul>
+        <div class="nav-logo">
+          <img src="./images/nav-logo.png" alt="logo" />
+        </div>
+        <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="index.html">Attractions</a></li>
-          <li><a href="index.html">Events</a></li>
-          <li><a href="index.html">About</a></li>
+          <li><a href="attractions.html">Attractions</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
         </ul>
-        <div>
-          <button>Sign Up</button>
-          <button>Sign In</button>
+        <div class="nav-buttons">
+          <button class="btn btn-secondary">Sign Up</button>
+          <button class="btn btn-primary">Sign In</button>
         </div>
       </nav>
 
@@ -77,10 +79,36 @@
               <p>Osaka Castle</p>
               <p class="card-description"></p>
             </div> -->
-
             <span class="material-symbols-outlined"> arrow_forward_ios </span>
           </div>
           <div class="card card-3">
+            <h4>Shopping</h4>
+            <!-- <p>Osaka Castle</p> -->
+            <!-- <div class="card-details">
+              <p>Osaka Castle</p>
+              <p class="card-description"></p>
+            </div> -->
+            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+          </div>
+          <div class="card card-4">
+            <h4>Shopping</h4>
+            <!-- <p>Osaka Castle</p> -->
+            <!-- <div class="card-details">
+              <p>Osaka Castle</p>
+              <p class="card-description"></p>
+            </div> -->
+            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+          </div>
+          <div class="card card-5">
+            <h4>Shopping</h4>
+            <!-- <p>Osaka Castle</p> -->
+            <!-- <div class="card-details">
+              <p>Osaka Castle</p>
+              <p class="card-description"></p>
+            </div> -->
+            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+          </div>
+          <div class="card card-6">
             <h4>Shopping</h4>
             <!-- <p>Osaka Castle</p> -->
             <!-- <div class="card-details">
@@ -125,7 +153,7 @@
             </ul>
           </div>
           <div class="footer-text">
-            <p>Copyright © 2024 Osaka Hometown. <br/>All rights reserved.</p>
+            <p>Copyright © 2024 Osaka Hometown. <br />All rights reserved.</p>
           </div>
           <div class="footer-icons">
             <img src="./images/icons/facebook.svg" alt="" />
