--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward_ios"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu"
+    />
   </head>
   <body>
-    <div class="container">
-      <!-- navbar -->
+    <!-- navbar -->
+    <div id="navbar">
       <nav>
         <div class="nav-logo">
           <img src="./images/nav-logo.png" alt="logo" />
@@ -51,77 +55,91 @@
           <button class="btn btn-primary">Sign In</button>
         </div>
       </nav>
+    </div>
 
-      <!-- hero -->
-      <div class="hero">
+    <!-- mobile navbar -->
+    <header id="mobile-navbar">
+      <div class="mobile-navbar-content">
+        <div class="mobile-menu-btn">
+          <a href="#">
+            <img
+              class="menu-icon"
+              src="./images/icons/hamburger-icon.svg"
+              alt=""
+            />
+          </a>
+        </div>
+        <div class="nav-logo">
+          <a href="#">
+            <img src="./images/nav-logo.png" alt="logo" />
+          </a>
+        </div>
+      </div>
+    </header>
+
+    <!-- hamburger menu -->
+    <!-- <div id="side-menu">
+      <nav>
+        <ul class="nav-links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="attractions.html">Attractions</a></li>
+          <li><a href="events.html">Events</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+        <div class="nav-logo">
+          <img src="./images/nav-logo.png" alt="logo" />
+        </div>
+      </nav>
+    </div> -->
+
+    <!-- hero -->
+    <div class="hero">
+      <div class="hero-background"></div>
+      <div class="hero-content">
         <div class="hero-text">
           <h1 class="hero-heading">Osaka.</h1>
           <h3>The City that's Fun<em>!</em></h3>
         </div>
-        <img class="hero-image" src="./images/osaka-hero.png" alt="" />
       </div>
-      <div class="featured-cards">
-        <h2>Top Activities in Osaka</h2>
-        <div class="cards">
-          <div class="card card-1">
-            <h4>Attractions</h4>
-            <!-- <p>Osaka Castle</p> -->
-            <!-- <div class="card-details">
+    </div>
+
+    <!-- featured cards -->
+    <div class="featured-cards">
+      <h2>Top Activities in Osaka</h2>
+      <div class="cards">
+        <div class="card card-1">
+          <h4>Attractions</h4>
+          <!-- <p>Osaka Castle</p> -->
+          <!-- <div class="card-details">
               <p>Osaka Castle</p>
               <p class="card-description"></p>
             </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
-          </div>
-          <div class="card card-2">
-            <h4>Eating</h4>
-            <!-- <p>Takoyaki</p> -->
-            <!-- <div class="card-details">
+          <span class="material-symbols-outlined"> arrow_forward_ios </span>
+        </div>
+        <div class="card card-2">
+          <h4>Eating</h4>
+          <!-- <p>Takoyaki</p> -->
+          <!-- <div class="card-details">
               <p>Osaka Castle</p>
               <p class="card-description"></p>
             </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
-          </div>
-          <div class="card card-3">
-            <h4>Shopping</h4>
-            <!-- <p>Osaka Castle</p> -->
-            <!-- <div class="card-details">
+          <span class="material-symbols-outlined"> arrow_forward_ios </span>
+        </div>
+        <div class="card card-3">
+          <h4>Shopping</h4>
+          <!-- <p>Osaka Castle</p> -->
+          <!-- <div class="card-details">
               <p>Osaka Castle</p>
               <p class="card-description"></p>
             </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
-          </div>
-          <div class="card card-4">
-            <h4>Shopping</h4>
-            <!-- <p>Osaka Castle</p> -->
-            <!-- <div class="card-details">
-              <p>Osaka Castle</p>
-              <p class="card-description"></p>
-            </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
-          </div>
-          <div class="card card-5">
-            <h4>Shopping</h4>
-            <!-- <p>Osaka Castle</p> -->
-            <!-- <div class="card-details">
-              <p>Osaka Castle</p>
-              <p class="card-description"></p>
-            </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
-          </div>
-          <div class="card card-6">
-            <h4>Shopping</h4>
-            <!-- <p>Osaka Castle</p> -->
-            <!-- <div class="card-details">
-              <p>Osaka Castle</p>
-              <p class="card-description"></p>
-            </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
-          </div>
+          <span class="material-symbols-outlined"> arrow_forward_ios </span>
         </div>
       </div>
+    </div>
 
-      <!-- Travel Guide -->
-      <div class="guide">
+    <!-- Travel Guide -->
+    <div class="guide">
+      <div class="guide-container">
         <div class="guide-image"></div>
         <div class="guide-text">
           <div class="text">
@@ -140,9 +158,11 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <!-- Footer -->
-      <footer>
+    <!-- Footer -->
+    <footer>
+      <div class="footer-content">
         <div class="footer-upper">
           <div class="footer-links">
             <ul>
@@ -161,11 +181,10 @@
             <img src="./images/icons/linkedin.svg" alt="" />
           </div>
         </div>
-        <div class="footer-lower">
-          <div class="footer-image"></div>
-        </div>
-      </footer>
-    </div>
+      </div>
+      <div class="footer-image"></div>
+    </footer>
+
     <script src="script.js" defer></script>
   </body>
 </html>
