completed guide section including mobile responsivenss

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
           </div>
         </div>
       </div>
-      <div class="footer-image"></div>
+      <div class="footer-image" loading="lazy"></div>
     </footer>
 
     <script src="script.js" defer></script>
