replaced png with svg images, fixed input borders, card background hover and logo positioning and hover state

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="navbar">
       <nav>
         <div class="nav-logo">
-          <img src="./images/nav-logo.png" alt="logo" />
+          <img src="./images/logo.svg" alt="logo" />
         </div>
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
@@ -107,7 +107,8 @@
     <div class="featured-cards">
       <h2>Top Activities in Osaka</h2>
       <div class="cards">
-        <div class="card card-1">
+        <div class="card">
+          <div class="card-bg card-1"></div>
           <h4>Attractions</h4>
           <!-- <p>Osaka Castle</p> -->
           <!-- <div class="card-details">
@@ -116,7 +117,8 @@
             </div> -->
           <span class="material-symbols-outlined"> arrow_forward_ios </span>
         </div>
-        <div class="card card-2">
+        <div class="card">
+          <div class="card-bg card-2"></div>
           <h4>Eating</h4>
           <!-- <p>Takoyaki</p> -->
           <!-- <div class="card-details">
@@ -125,7 +127,8 @@
             </div> -->
           <span class="material-symbols-outlined"> arrow_forward_ios </span>
         </div>
-        <div class="card card-3">
+        <div class="card">
+          <div class="card-bg card-3"></div>
           <h4>Shopping</h4>
           <!-- <p>Osaka Castle</p> -->
           <!-- <div class="card-details">
