completed side bar menu open and close functionality

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
       Toggle Menu
     </button> -->
 
-    <div id="mobile-menu-overlay"></div>
+    <div id="overlay"></div>
 
     <div id="sidebar" aria-label="Main Navigation">
       <div class="sidebar-container">
-        <div class="close-icon">X</div>
+        <div id="close-btn" class="close-icon">X</div>
         <nav>
           <div class="sidebar-nav-logo">
             <img src="./images/nav-logo.png" alt="logo" />
