--- a/index.html
+++ b/index.html
@@ -81,6 +81,34 @@
       </div>
     </div>
 
+    <div id="modal-signup">
+      <div class="overlay-content">
+        <button class="close-icon">×</button>
+        <div class="upper-section">
+          <h2>Welcome Back!</h2>
+          <div class="overlay-text">
+            Use your email or another service to continue your journey.
+          </div>
+        </div>
+        <div class="lower-section">
+          <button class="auth-button google-button">
+            <img src="./images/icons/google.svg" alt="Google icon" />
+            Continue with Google
+          </button>
+          <button class="auth-button apple-button">
+            <img src="./images/icons/apple.svg" alt="Apple icon" />
+            Continue with Apple
+          </button>
+          <button class="auth-button email-button">Continue with email</button>
+          <div class="small-text">
+            By continuing, you agree to our <a href="">Terms of Service.</a>
+            <br />
+            Read our <a href="">Privacy Policy.</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- side menu -->
     <div id="sidebar" aria-label="Main Navigation">
       <div class="sidebar-container">
@@ -97,12 +125,8 @@
           </ul>
         </nav>
         <div class="sidebar-nav-buttons">
-          <button class="btn btn-secondary-side-bar">
-            <li><a href="">Sign Up</a></li>
-          </button>
-          <button class="btn btn-primary-side-bar">
-            <li><a href="">Sign In</a></li>
-          </button>
+          <button class="btn btn-secondary-side-bar">Sign Up</button>
+          <button class="btn btn-primary-side-bar">Sign In</button>
         </div>
       </div>
     </div>
