refactored and completed Javascript for the modal form

--- a/index.html
+++ b/index.html
@@ -143,9 +143,9 @@
             <div class="logo-login-btn">
               <div class="logo-box">
                 <div>
-                  <img src="./images/icons/facebook.svg" alt="" />
+                  <img src="./images/icons/github.svg" alt="" />
                 </div>
-                <p>Facebook</p>
+                <p>Github</p>
               </div>
             </div>
           </div>
@@ -156,7 +156,7 @@
     <!-- side menu -->
     <div id="sidebar" aria-label="Main Navigation">
       <div class="sidebar-container">
-        <div id="close-btn" class="close-icon">X</div>
+        <div id="close-btn" class="close-signup-icon">X</div>
         <nav>
           <div class="sidebar-nav-logo">
             <img src="./images/nav-logo.png" alt="logo" />
