reduced image size for featured card

--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
               <p>Copyright © 2024 Osaka Hometown. <br />All rights reserved.</p>
             </div>
             <div class="footer-icons">
-              <img src="./images/icons/facebook.svg" alt="" />
+              <img src="./images/icons/google.svg" alt="" />
               <img src="./images/icons/twitter.svg" alt="" />
-              <img src="./images/icons/linkedin.svg" alt="" />
+              <img src="./images/icons/github.svg" alt="" />
             </div>
           </div>
         </div>
