change guide image to webp and update linkedin icon

--- a/index.html
+++ b/index.html
@@ -302,9 +302,10 @@
               <p>Copyright © 2024 Osaka Hometown. <br />All rights reserved.</p>
             </div>
             <div class="footer-icons">
-              <img src="./images/icons/google.svg" alt="" />
-              <img src="./images/icons/twitter.svg" alt="" />
-              <img src="./images/icons/github.svg" alt="" />
+              <img src="./images/icons/google.svg" alt="Google" />
+              <img src="./images/icons/twitter.svg" alt="Twitter" />
+              <img src="./images/icons/github.svg" alt="Github" />
+              <img src="./images/icons/linkedin-logo.svg" alt="Linkedin" />
             </div>
           </div>
         </div>
