completed the javascript functionality of featured cards including accessibility

--- a/index.html
+++ b/index.html
@@ -28,18 +28,16 @@
       href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Gothic+A1:wght@100;200;300;400;500;600;700;800;900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward_ios"
-    />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu"
-    />
+
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward_ios,close,menu"
+    />
+
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -233,32 +231,77 @@
           <div class="card">
             <div class="card-bg card-1"></div>
             <h4>Attractions</h4>
-            <!-- <p>Osaka Castle</p> -->
-            <!-- <div class="card-details">
-              <p>Osaka Castle</p>
-              <p class="card-description"></p>
-            </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+            <div class="card-details">
+              <div class="details-content">
+                <p class="card-title">Osaka Castle</p>
+                <p class="card-description">
+                  Explore Osaka Castle, a symbol of Japan's past. Built over 400
+                  years ago, its strong walls and golden details tell stories of
+                  samurai and ancient battles. Wander through peaceful gardens
+                  and enjoy stunning city views. A visit to Osaka Castle is a
+                  step back in time.
+                </p>
+              </div>
+              <div class="card-image">
+                <img src="./images/osaka-castle2.png" alt="" />
+              </div>
+            </div>
+            <div class="icon-container">
+              <span class="material-symbols-outlined arrow">
+                arrow_forward_ios
+              </span>
+              <span class="material-symbols-outlined close"> close </span>
+            </div>
           </div>
           <div class="card">
             <div class="card-bg card-2"></div>
             <h4>Eating</h4>
-            <!-- <p>Takoyaki</p> -->
-            <!-- <div class="card-details">
-              <p>Osaka Castle</p>
-              <p class="card-description"></p>
-            </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+            <div class="card-details">
+              <div class="details-content">
+                <p class="card-title">Dotonbori</p>
+                <p class="card-description">
+                  Indulge in the flavors of Dotonbori, Osaka's famous food
+                  district. Savor iconic street foods like takoyaki,
+                  okonomiyaki, and kushikatsu as you wander the neon-lit
+                  streets. With every bite, experience the vibrant spirit and
+                  culinary magic that make Dotonbori a must-visit.
+                </p>
+              </div>
+              <div class="card-image">
+                <img src="./images/takoyaki-2.png" alt="" />
+              </div>
+            </div>
+            <div class="icon-container">
+              <span class="material-symbols-outlined arrow">
+                arrow_forward_ios
+              </span>
+              <span class="material-symbols-outlined close"> close </span>
+            </div>
           </div>
           <div class="card">
             <div class="card-bg card-3"></div>
             <h4>Shopping</h4>
-            <!-- <p>Osaka Castle</p> -->
-            <!-- <div class="card-details">
-              <p>Osaka Castle</p>
-              <p class="card-description"></p>
-            </div> -->
-            <span class="material-symbols-outlined"> arrow_forward_ios </span>
+            <div class="card-details">
+              <div class="details-content">
+                <p class="card-title">Shinsaibashi</p>
+                <p class="card-description">
+                  Discover Shinsaibashi, Osaka's premier shopping district,
+                  where traditional and modern collide. Stroll through the
+                  bustling arcade filled with trendy boutiques, luxury brands,
+                  and unique local shops. Whether you're hunting for fashion, or
+                  souvenirs, Shinsaibashi has it all.
+                </p>
+              </div>
+              <div class="card-image">
+                <img src="./images/namba-2.png" alt="" />
+              </div>
+            </div>
+            <div class="icon-container">
+              <span class="material-symbols-outlined arrow">
+                arrow_forward_ios
+              </span>
+              <span class="material-symbols-outlined close"> close </span>
+            </div>
           </div>
         </div>
       </div>
