added a divider section

--- a/index.html
+++ b/index.html
@@ -219,6 +219,94 @@
         </div>
       </div>
 
+      <!-- Description -->
+      <div class="description">
+        <div class="description-image">
+          <img class="image-1" src="./images/border-pattern.png" alt="" />
+          <img class="image-2" src="./images/description-image.webp" alt="" />
+        </div>
+        <div class="description-content">
+          <h2>Osaka</h2>
+          <h3>The City That Will Pleasantly Surprise</h3>
+          <p>
+            🎉 Explore Japan's most playful city where you can
+            <br />
+            <br />
+          </p>
+          <ul>
+            <li>✨ Enjoy beautiful temple.</li>
+            <li>🎢 Visit World-class theme parks and attractions.</li>
+            <li>🍜 Eat delicious food at every corner.</li>
+            <li>🛍️ Shop amazying products.</li>
+          </ul>
+          <br />
+          <br />
+          <p>Your next adventure in <strong>Osaka</strong> awaits!</p>
+        </div>
+      </div>
+
+      <!-- Divider -->
+      <div class="wave-container">
+        <svg
+          class="wave-line wave-1"
+          viewBox="0 0 400 30"
+          preserveAspectRatio="none"
+        >
+          <!-- Multiple waves to ensure smooth continuous motion -->
+          <path
+            class="wave-path"
+            d="M-50,15 
+            Q-37.5,5 -25,15 
+            Q-12.5,25 0,15 
+            Q12.5,5 25,15 
+            Q37.5,25 50,15
+            Q62.5,5 75,15 
+            Q87.5,25 100,15
+            Q112.5,5 125,15 
+            Q137.5,25 150,15
+            Q162.5,5 175,15 
+            Q187.5,25 200,15
+            Q212.5,5 225,15 
+            Q237.5,25 250,15
+            Q262.5,5 275,15 
+            Q287.5,25 300,15
+            Q312.5,5 325,15 
+            Q337.5,25 350,15
+            Q362.5,5 375,15 
+            Q387.5,25 400,15
+            Q412.5,5 425,15 
+            Q437.5,25 450,15"
+          ></path>
+        </svg>
+        <svg class="wave-line" viewBox="0 0 400 30" preserveAspectRatio="none">
+          <!-- Multiple waves to ensure smooth continuous motion -->
+          <path
+            class="wave-path wave-2"
+            d="M-50,15 
+            Q-37.5,5 -25,15 
+            Q-12.5,25 0,15 
+            Q12.5,5 25,15 
+            Q37.5,25 50,15
+            Q62.5,5 75,15 
+            Q87.5,25 100,15
+            Q112.5,5 125,15 
+            Q137.5,25 150,15
+            Q162.5,5 175,15 
+            Q187.5,25 200,15
+            Q212.5,5 225,15 
+            Q237.5,25 250,15
+            Q262.5,5 275,15 
+            Q287.5,25 300,15
+            Q312.5,5 325,15 
+            Q337.5,25 350,15
+            Q362.5,5 375,15 
+            Q387.5,25 400,15
+            Q412.5,5 425,15 
+            Q437.5,25 450,15"
+          ></path>
+        </svg>
+      </div>
+
       <!-- featured cards -->
       <div class="featured-cards">
         <h2>Top Activities in Osaka</h2>
