added description benefit section

--- a/index.html
+++ b/index.html
@@ -222,22 +222,34 @@
       <!-- Description -->
       <div class="description">
         <div class="description-image">
-          <img class="image-1" src="./images/border-pattern.png" alt="" />
-          <img class="image-2" src="./images/description-image.webp" alt="" />
+          <img class="image-2" src="./images/description-gif.gif" alt="" />
         </div>
         <div class="description-content">
-          <h2>Osaka</h2>
-          <h3>The City That Will Pleasantly Surprise</h3>
+          <h2>Osaka.</h2>
+          <h3>The City That Will Pleasantly Surprise!</h3>
+          <br />
           <p>
-            🎉 Explore Japan's most playful city where you can
+            Explore Japan's most playful city where you can:
             <br />
             <br />
           </p>
           <ul>
-            <li>✨ Enjoy beautiful temple.</li>
-            <li>🎢 Visit World-class theme parks and attractions.</li>
-            <li>🍜 Eat delicious food at every corner.</li>
-            <li>🛍️ Shop amazying products.</li>
+            <li>
+              <img src="./images/castle.webp" alt="Osaka castle" /> Enjoy
+              beautiful temples.
+            </li>
+            <li>
+              <img src="./images/chair-swing-ride.webp" alt="Osaka castle" />
+              Visit World-class theme parks & attractions.
+            </li>
+            <li>
+              <img src="./images/ramen.webp" alt="Osaka castle" /> Eat delicious
+              food at every corner.
+            </li>
+            <li>
+              <img src="./images/online-shopping.webp" alt="Osaka castle" />
+              Shop amazing products & souvenirs.
+            </li>
           </ul>
           <br />
           <br />
