Complete description section except media responsiveness

--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
       <!-- Description -->
       <div class="description">
         <div class="description-image">
-          <img class="image-2" src="./images/description-gif.gif" alt="" />
+          <img class="image-1" src="./images/description-gif.gif" alt="" />
         </div>
         <div class="description-content">
           <h2>Osaka.</h2>
           <h3>The City That Will Pleasantly Surprise!</h3>
-          <br />
+
           <p>
-            Explore Japan's most playful city where you can:
+            Explore Japan's most <span>playful</span> city.
             <br />
             <br />
           </p>
@@ -253,7 +253,7 @@
           </ul>
           <br />
           <br />
-          <p>Your next adventure in <strong>Osaka</strong> awaits!</p>
+          <p>Your next adventure in <strong>OSAKA</strong> awaits!</p>
         </div>
       </div>
 
