completed mobile responsivenss for description benefit section

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             </li>
             <li>
               <img src="./images/chair-swing-ride.webp" alt="Osaka castle" />
-              Visit World-class theme parks & attractions.
+              Visit World-class attractions.
             </li>
             <li>
               <img src="./images/ramen.webp" alt="Osaka castle" /> Eat delicious
