changed a lot of image loading to lazy except hero

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 
       <!-- hero -->
       <div class="hero">
-        <div class="hero-background"></div>
+        <div loading="eager" class="hero-background"></div>
         <div class="hero-content">
           <div class="hero-text">
             <h1 class="hero-heading">Osaka.</h1>
@@ -222,7 +222,12 @@
       <!-- Description -->
       <div class="description">
         <div class="description-image">
-          <img class="image-1" src="./images/description-gif.gif" alt="" />
+          <img
+            loading="lazy"
+            class="image-1"
+            src="./images/description-gif.gif"
+            alt=""
+          />
         </div>
         <div class="description-content">
           <h2>Osaka.</h2>
@@ -235,19 +240,35 @@
           </p>
           <ul>
             <li>
-              <img src="./images/castle.webp" alt="Osaka castle" /> Enjoy
-              beautiful temples.
+              <img
+                loading="lazy"
+                src="./images/castle.webp"
+                alt="Osaka castle"
+              />
+              Enjoy beautiful temples.
             </li>
             <li>
-              <img src="./images/chair-swing-ride.webp" alt="Osaka castle" />
+              <img
+                loading="lazy"
+                src="./images/chair-swing-ride.webp"
+                alt="Osaka castle"
+              />
               Visit World-class attractions.
             </li>
             <li>
-              <img src="./images/ramen.webp" alt="Osaka castle" /> Eat delicious
-              food at every corner.
+              <img
+                loading="lazy"
+                src="./images/ramen.webp"
+                alt="Osaka castle"
+              />
+              Eat delicious food at every corner.
             </li>
             <li>
-              <img src="./images/online-shopping.webp" alt="Osaka castle" />
+              <img
+                loading="lazy"
+                src="./images/online-shopping.webp"
+                alt="Osaka castle"
+              />
               Shop amazing products & souvenirs.
             </li>
           </ul>
@@ -338,7 +359,7 @@
                 </p>
               </div>
               <div class="card-image">
-                <img src="./images/osaka-castle2.png" alt="" />
+                <img loading="lazy" src="./images/osaka-castle2.png" alt="" />
               </div>
             </div>
             <div class="icon-container">
@@ -363,7 +384,7 @@
                 </p>
               </div>
               <div class="card-image">
-                <img src="./images/takoyaki-2.png" alt="" />
+                <img loading="lazy" src="./images/takoyaki-2.png" alt="" />
               </div>
             </div>
             <div class="icon-container">
@@ -388,7 +409,7 @@
                 </p>
               </div>
               <div class="card-image">
-                <img src="./images/namba-2.png" alt="" />
+                <img loading="lazy" src="./images/namba-2.png" alt="" />
               </div>
             </div>
             <div class="icon-container">
@@ -404,7 +425,7 @@
       <!-- Travel Guide -->
       <div class="guide">
         <div class="guide-container">
-          <div class="guide-image"></div>
+          <div loading="lazy" class="guide-image"></div>
           <div class="guide-text">
             <div class="text">
               <h3>Meet Your Travel Guide</h3>
@@ -440,10 +461,26 @@
               <p>Copyright © 2024 Osaka Hometown. <br />All rights reserved.</p>
             </div>
             <div class="footer-icons">
-              <img src="./images/icons/google.svg" alt="Google" />
-              <img src="./images/icons/twitter.svg" alt="Twitter" />
-              <img src="./images/icons/github.svg" alt="Github" />
-              <img src="./images/icons/linkedin-logo.svg" alt="Linkedin" />
+              <img
+                loading="lazy"
+                src="./images/icons/google.svg"
+                alt="Google"
+              />
+              <img
+                loading="lazy"
+                src="./images/icons/twitter.svg"
+                alt="Twitter"
+              />
+              <img
+                loading="lazy"
+                src="./images/icons/github.svg"
+                alt="Github"
+              />
+              <img
+                loading="lazy"
+                src="./images/icons/linkedin-logo.svg"
+                alt="Linkedin"
+              />
             </div>
           </div>
         </div>
